--- a/project.config.json
+++ b/project.config.json
@@ -43,7 +43,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 0,
+			"current": 1,
 			"list": [
 				{
 					"id": 0,
@@ -54,8 +54,9 @@
 				{
 					"id": 1,
 					"name": "活动",
-					"pathName": "pages/interface/article/index",
-					"query": ""
+					"pathName": "pages/add-choice/add-choice",
+					"query": "",
+					"scene": null
 				}
 			]
 		}
