初步版本制作，只是实现对应的添加与帮选功能

--- a/app.json
+++ b/app.json
@@ -3,12 +3,13 @@
   "pages": [
     "pages/index/index",
     "pages/account/account",
-    "pages/add-choice/add-choice"
+    "pages/add-choice/add-choice",
+    "pages/help/help"
   ],
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#ccc",
-    "navigationBarTitleText": "盲选",
+    "navigationBarTitleText": "随心所选-帮你选",
     "navigationBarTextStyle": "black",
     "navigationStyle": "custom"
   },
