--- a/project.config.json
+++ b/project.config.json
@@ -7,7 +7,7 @@
 		"postcss": true,
 		"minified": true,
 		"newFeature": true,
-		"autoAudits": true,
+		"autoAudits": false,
 		"uglifyFileName": true,
 		"checkInvalidKey": true,
 		"coverView": true,
@@ -48,7 +48,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 0,
+			"current": 1,
 			"list": [
 				{
 					"id": 0,
@@ -59,9 +59,9 @@
 				},
 				{
 					"id": 1,
-					"name": "活动",
-					"pathName": "pages/add-choice/add-choice",
-					"query": "",
+					"name": "找人帮忙",
+					"pathName": "pages/help/help",
+					"query": "from=oPQ1o5CHrpAXw4AidI2dLNDJ6Nv8&id=9afd9b6a5d2ad53107369ce02952f0c7",
 					"scene": null
 				}
 			]
