--- a/app.json
+++ b/app.json
@@ -4,7 +4,8 @@
     "pages/index/index",
     "pages/account/account",
     "pages/add-choice/add-choice",
-    "pages/help/help"
+    "pages/help/help",
+    "pages/map/map"
   ],
   "window": {
     "backgroundTextStyle": "light",
@@ -12,6 +13,11 @@
     "navigationBarTitleText": "随心所选-帮你选",
     "navigationBarTextStyle": "black",
     "navigationStyle": "custom"
+  },
+  "permission": {
+    "scope.userLocation": {
+      "desc": "你的位置信息将用于小程序位置接口的效果展示"
+    }
   },
   "sitemapLocation": "sitemap.json"
 }
