--- a/project.config.json
+++ b/project.config.json
@@ -48,7 +48,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 1,
+			"current": 2,
 			"list": [
 				{
 					"id": 0,
@@ -62,6 +62,13 @@
 					"name": "找人帮忙",
 					"pathName": "pages/help/help",
 					"query": "from=oPQ1o5GRkC5KDs2y9rBysQ_bwS8c&id=f1006ad85d2c68c5081b4e016115770f",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "地图",
+					"pathName": "pages/map/map",
+					"query": "",
 					"scene": null
 				}
 			]
